JDK-8369166: rename and add --enable-preview to test